--- a/MenuForm.resx
+++ b/MenuForm.resx
@@ -118,20 +118,32 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="picAudio.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EgAACxIB0t1+/AAAAWtJREFUSEvtlLEuBFEUhpeKJbEiRKvVUKo8gEqxjUZJQSRbaUSnIR5Cq0AUnkCi
+        oEBIBBFBIhEtESGfzOx/Z44zs2tZ5X7d/c937p3s3nMLhRbNAvQB28ADMOXrTQGUgFNSnrwTAIpA2ec1
+        AbqBQ218HU7wXgBYlTLraxn0NQdquAQGGjhgBPgAXoAhXywDF2ETw3H0H8iJ+dboAJal7QNttnCW7hnz
+        CmwAPcaJSZqq2S6wY9bt+qiIMStmmj15DnCieNpkM8oqVsw0e/IcYF7xucnGlW1aMdPsyXOAXuBdpaKy
+        cCHu6zZ78hzNSTigS9mg1o91mz15DrCg+M5kE8r2rJhp9uQ5wJHiRZMtKVuxYq1rWjJOTNJUzaJh3Iqu
+        p9adwK3U9NnQoF2l+yf8dtDWpEXT3+HrCX98KkaBT+ANGPb1DHrswm9808AB61LmfK0muudhWiOevROI
+        rikw6fMfAfrNIen4t/gvvgAqBaaBiB+5mwAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="picBtnAnteriorCapitulo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wAAADsABataJCQAAAG5JREFUSEvtlMEJgDAQBMcqxP4LEfwK4lNEm7ABw8L5CfmoOUG4gRBCYCbkcRD8
+        vQAADr0BR/uQrQAAAG5JREFUSEvtlMEJgDAQBMcqxP4LEfwK4lNEm7ABw8L5CfmoOUG4gRBCYCbkcRD8
         iQ5YgBFo8su3SL4CJzDXDrTAbnLtOlcj5EVc5eIw+ZPV57IS7gH3LxIRucUnEQ27zSJT7WF3oZdrVA9e
         gcCHBFDmRTUMs4mAAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="picBtnProximoCapitulo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAABxSURBVEhL7ZQxCoAwDEWfpxDvfxDBVRBHEb2EF7AEMoUONjSDkAelQ9v/2g4fkj8xAAuwAqNd
-        7IEINuAFLmCyG3ogN79VInPIS1LShEsy6wHPeGxYjXBBC64v+kqGVwkNl7LbNfyMKDsRSFUfEeFJHAVn
-        WkU18l2+EQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAHFJREFUSEvt
+        lDEKgDAMRZ+nEO9/EMFVEEcRvYQXsAQyhQ42NIOQB6VD2//aDh+SPzEAC7ACo13sgQg24AUuYLIbeiA3
+        v1Uic8hLUtKESzLrAc94bFiNcEELri/6SoZXCQ2Xsts1/IwoOxFIVR8R4UkcBWdaRTXyXb4RAAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -142,26 +154,26 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC4
-        DwAAAk1TRnQBSQFMAgEBBAEAAXgBAAF4AQABGAEAARgBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFg
+        DwAAAk1TRnQBSQFMAgEBBAEAAZABAAGQAQABGAEAARgBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFg
         AwABMAMAAQEBAAEgBgABSP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A
-        /wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8AwwADEgEYA1IBpQNYAeoDAAH/AwAB/wMAAf8DAAH/
-        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DWwHoA1EBoQMSARd4AAMJAQwDSgGKA14B1wMh
+        /wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8AwwADEgEYA1IBpQNdAeoDAAH/AwAB/wMAAf8DAAH/
+        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DYAHoA1EBoQMSARd4AAMJAQwDSgGKA14B1wMh
         AfsDAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DXgHSAzMBUngA
         A1IBqAMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DUwGneAADSAGEAwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
-        Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wNfAdUUAAMSARgDUgGlA1gB6gMAAf8DAAH/AwAB/wMAAf8DAAH/
-        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/A1sB6ANRAaEDEgEXFAADXAHrAwAB/wMp
-        AT4wAAMsAUMDAAH/A1wB6xgAAxIBGANSAaUDWAHqAwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
-        Af8DAAH/AwAB/wMAAf8DAAH/A1sB6ANRAaEDEgEXGAADXAHZAwAB/wM8AWYDBQEGMwAB/wMAAf8UAANS
+        Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wNfAdUUAAMSARgDUgGlA10B6gMAAf8DAAH/AwAB/wMAAf8DAAH/
+        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/A2AB6ANRAaEDEgEXFAADYQHrAwAB/wMp
+        AT4wAAMsAUMDAAH/A2EB6xgAAxIBGANSAaUDXQHqAwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
+        Af8DAAH/AwAB/wMAAf8DAAH/A2AB6ANRAaEDEgEXGAADXAHZAwAB/wM8AWYDBQEGMwAB/wMAAf8UAANS
         AagDAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DUwGnFwAB/wMAAf87AAH/AwAB/xgAA1IBqAMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DUwGnGAADIQH7AwAB/wMQ
-        ARU3AAH/AwAB/xQAA1wB6wMAAf8DKQE+DwAB/wMAAf8TAAH/AwAB/wwAAywBQwMAAf8DXAHrFwAB/wMA
-        Af8IAANaAb8DAAH/AwAB/wMAAf8DAAH/AwAB/wNaAb8XAAH/AwAB/xgAA1wB6wMAAf8DKQE+MAADLAFD
-        AwAB/wNcAesbAAH/AwAB/wNMAY4DCwEOMwAB/wMAAf8XAAH/AwAB/xMAAf8DAAH/EwAB/wMAAf8TAAH/
+        ARU3AAH/AwAB/xQAA2EB6wMAAf8DKQE+DwAB/wMAAf8TAAH/AwAB/wwAAywBQwMAAf8DYQHrFwAB/wMA
+        Af8IAANaAb8DAAH/AwAB/wMAAf8DAAH/AwAB/wNaAb8XAAH/AwAB/xgAA2EB6wMAAf8DKQE+MAADLAFD
+        AwAB/wNhAesbAAH/AwAB/wNMAY4DCwEOMwAB/wMAAf8XAAH/AwAB/xMAAf8DAAH/EwAB/wMAAf8TAAH/
         AwAB/xcAAf8DAAH/CAADWgG/AwAB/wMAAf8DAAH/AwAB/wMAAf8DWgG/FwAB/wMAAf8bAAH/AwAB/zsA
         Af8DAAH/GwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
-        Af8DAAH/AwAB/wMAAf8DHgH9FwAB/wMAAf8TAAH/AwAB/xMAAf8DAAH/EwAB/wMAAf8XAAH/AwAB/zsA
+        Af8DAAH/AwAB/wMAAf8DJAH9FwAB/wMAAf8TAAH/AwAB/xMAAf8DAAH/EwAB/wMAAf8XAAH/AwAB/zsA
         Af8DAAH/GwAB/wMAAf87AAH/AwAB/xsAAf8DAAH/A14B1wMhAfsDAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/xcAAf8DAAH/EwAB/wMAAf8TAAH/AwAB/xMA
         Af8DAAH/FwAB/wMAAf87AAH/AwAB/xsAAf8DAAH/DAADWgG/A1oBvxAAA1oBvwNaAb8PAAH/AwAB/xsA
@@ -177,23 +189,23 @@
         AdgDAAH/AwAB/wMAAf8DAAH/A1sB2AM0AVQTAAH/AwAB/xcAAf8DAAH/CAADWgG/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAAH/A1oBvxMAAf8DAAH/GwAB/wMAAf87AAH/AwAB/xsAAf8DAAH/EAADWgG/A14B1wMT
         ARkIAAMTARkDXgHXA10BzwsAAf8DAAH/FwAB/wMAAf9DAAH/AwAB/xcAAf8DAAH/CAADWgG/AwAB/wMA
-        Af8DAAH/AwAB/wMAAf8DAAH/A1oBvxMAAf8DAAH/GAADWwHsAwAB/wMpAT4wAAMqAT8DAAH/A1wB6xsA
-        Af8DAAH/EwAB/wMAAf8DXwHaAxMBGQMTARkDXwHaAwAB/wMAAf8LAAH/AwAB/xQAA14B5gMAAf8DIQEv
+        Af8DAAH/AwAB/wMAAf8DAAH/A1oBvxMAAf8DAAH/GAADXQHsAwAB/wMpAT4wAAMqAT8DAAH/A2EB6xsA
+        Af8DAAH/EwAB/wMAAf8DXwHaAxMBGQMTARkDXwHaAwAB/wMAAf8LAAH/AwAB/xQAA2EB5gMAAf8DIQEv
         OAADJAE1AwAB/wNgAeAXAAH/AwAB/zsAAf8DAAH/GAADUgGoAwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wNSAagbAAH/AwAB/xMAAf8DAAH/
-        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/CwAB/wMAAf8UAANHAYMDAAH/A04B8gMtAUUwAAMvAUkDTQHz
-        AwAB/wNGAYEXAAH/AwAB/zsAAf8DAAH/GAADEgEYA1EBogNbAegDAAH/AwAB/wMAAf8DAAH/AwAB/wMA
-        Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DWwHoA1EBogMSARgbAAH/AwAB/xMAAf8DAAH/A10B3AMA
-        Af8DAAH/A10B3AMAAf8DAAH/CwAB/wMAAf8UAAQCA1IBoAMAAf8DHgH9AzwBZigAAz4BagMPAf4DAAH/
+        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/CwAB/wMAAf8UAANHAYMDAAH/A1UB8gMtAUUwAAMvAUkDUAHz
+        AwAB/wNGAYEXAAH/AwAB/zsAAf8DAAH/GAADEgEYA1EBogNgAegDAAH/AwAB/wMAAf8DAAH/AwAB/wMA
+        Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DYAHoA1EBogMSARgbAAH/AwAB/xMAAf8DAAH/A10B3AMA
+        Af8DAAH/A10B3AMAAf8DAAH/CwAB/wMAAf8UAAQCA1IBoAMAAf8DJAH9AzwBZigAAz4BagMSAf4DAAH/
         A1ABnwQCFwAB/wMAAf8IAANaAb8DWgG/CAADWgG/A1oBvwgAA1oBvwNaAb8LAAH/AwAB/zsAAf8DAAH/
-        OwAB/wMAAf8TAAH/AwAB/wMSARcDXQHMA1wBywMSARcDAAH/AwAB/wsAAf8DAAH/HAADRQF8Aw8B/gMA
-        Af8DSwGNBAEYAAQBA0sBjwMAAf8DDwH+A0QBexwAA1sB7AMAAf8DKQE+BwAB/wMAAf8LAAH/AwAB/wsA
-        Af8DAAH/BAADKgE/AwAB/wNcAes7AAH/AwAB/zsAAf8DAAH/EwAB/wMAAf8TAAH/AwAB/wsAAf8DAAH/
-        IAADMwFSAywB+QMAAf8DVgGzAwgBChAAAwgBCgNWAbMDAAH/AywB+QMzAVIgAANSAagDAAH/AwAB/wMA
+        OwAB/wMAAf8TAAH/AwAB/wMSARcDXQHMA1wBywMSARcDAAH/AwAB/wsAAf8DAAH/HAADRQF8AxIB/gMA
+        Af8DSwGNBAEYAAQBA0sBjwMAAf8DEgH+A0QBexwAA10B7AMAAf8DKQE+BwAB/wMAAf8LAAH/AwAB/wsA
+        Af8DAAH/BAADKgE/AwAB/wNhAes7AAH/AwAB/zsAAf8DAAH/EwAB/wMAAf8TAAH/AwAB/wsAAf8DAAH/
+        IAADMwFSAzUB+QMAAf8DVgGzAwgBChAAAwgBCgNWAbMDAAH/AzUB+QMzAVIgAANSAagDAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/A1IBqCgA
         A1oBvwMAAf8DAAH/AwAB/wMAAf8DAAH/OAADIQH7AwAB/wMJAQwPAAH/AwAB/xMAAf8DAAH/CwAB/wMA
-        Af8kAAMlATcDVgHuAwAB/wNdAdEDEgEXCAADEgEXA10B0QMAAf8DXAHrAyUBNyQAAxIBGANRAaIDWwHo
-        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/A1sB6ANRAaIDEgEY
+        Af8kAAMlATcDWQHuAwAB/wNdAdEDEgEXCAADEgEXA10B0QMAAf8DYQHrAyUBNyQAAxIBGANRAaIDYAHo
+        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/A2AB6ANRAaIDEgEY
         KAADWgG/AwAB/wMAAf8DAAH/AwAB/wNaAb84AANfAdoDAAH/A0sBjwMLAQ4LAAH/AwAB/xMAAf8DAAH/
         CwAB/wMAAf8oAAMZASIDXgHXAwAB/wNfAeUDJgE4AyYBOANfAeUDAAH/A14B1wMWAR47AAH/AwAB/wsA
         Af8DAAH/CwAB/wMAAf+IAANCAXQDAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
