--- a/MenuAdmin.resx
+++ b/MenuAdmin.resx
@@ -117,8 +117,35 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="ImagemPadrao" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\open-book.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADO
+        BAAAAk1TRnQBSQFMAwEBAAEQAQABEAEAARgBAAEYAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABYAMA
+        ARgDAAEBAQABIAYAAST/AP8A/wD/AP8A/wBEAAN3AbEDcwGt/wBRAAPjAf8D4wH/A2UBnAMEAQUMAAMJ
+        AQsDYQGXA+MB/wPjAf8D4wH/A+MB/wNgAZYDCAEKDAADBAEFA2UBnAPjAf8D4wH//wApAAPjAf8D4wH/
+        A+MB/wPjAf8D4wH/A+MB/wPjAf8D4wH/A+MB/wPjAf8D4wH/A7EB4QPjAf8D4wH/A+MB/wPjAf8D4wH/
+        A+MB/wPjAf8D4wH/A+MB/wPjAf//ACkAA+MB/wPjAf8DZQGcA+MB/wPjAf8D4wH/A+MB/wPjAf8DZQGc
+        A+MB/wPjAf8EAAQCA2YBnwPjAf8D4wH/A+MB/wPjAf8D4wH/A2UBnAPjAf8D4wH//wApAAPjAf8D4wH/
+        HAAD4wH/A+MB/yQAA+MB/wPjAf//ACkAA+MB/wPjAf8cAAPjAf8D4wH/CAADZAGbGAAD4wH/A+MB//8A
+        KQAD4wH/A+MB/xwAA+MB/wPjAf8IAAPjAf8DigHDFAAD4wH/A+MB//8AKQAD4wH/A+MB/xwAA+MB/wPj
+        Af8IAAPjAf8D4wH/A7UB5BAAA+MB/wPjAf//ACkAA+MB/wPjAf8cAAPjAf8D4wH/CAAD4wH/A+MB/wPj
+        Af8D1AH3DAAD4wH/A+MB//8AKQAD4wH/A+MB/xwAA+MB/wPjAf8IAAPjAf8D4wH/A+MB/wPjAf8D4wH/
+        CAAD4wH/A+MB//8AKQAD4wH/A+MB/xwAA+MB/wPjAf8IAAPjAf8D4wH/A+MB/wPjAf8D4wH/CAAD4wH/
+        A+MB//8AKQAD4wH/A+MB/xwAA+MB/wPjAf8IAAPjAf8D4wH/A+MB/wPjAf8D4wH/CAAD4wH/A+MB//8A
+        KQAD4wH/A+MB/xwAA+MB/wPjAf8IAAPjAf8D4wH/A+MB/wPjAf8D4wH/CAAD4wH/A+MB//8AKQAD4wH/
+        A+MB/wNfAZQDBgEIDAADBgEIA2kBoQPjAf8D4wH/CAAD4wH/A+MB/wPjAf8D4wH/A+MB/wgAA+MB/wPj
+        Af//ACkAA9AB9QPjAf8D4wH/A+MB/wPjAf8D4wH/A+MB/wPjAf8D4wH/A+MB/wPQAfUIAAPjAf8D4wH/
+        A+MB/wPjAf8D4wH/CAAD4wH/A88B9P8ALQADBQEGA2QBmgPjAf8D4wH/A+MB/wPjAf8D4wH/A28BqAMG
+        AQcQAAPjAf8D4wH/A+MB/wPjAf8IAAQC/wBpAAPjAf8D4wH/A+MB//8AeQAD4wH/A+MB//8AfQAD4wH/
+        /wD/ALYAAUIBTQE+BwABPgMAASgDAAFgAwABGAMAAQEBAAEBBQABIAEBFgAD/wEAA/8JAAP/CQAD/wkA
+        A/8JAAH/AecB/wkAAYcBAAHhCQABgAEAAQEJAAGAAQgBAQkAAZ8BzwH5CQABnwHNAfkJAAGfAcwB+QkA
+        AZ8BzAF5CQABnwHMATkJAAGfAcwBGQkAAZ8BzAEZCQABnwHMARkJAAGfAcwBGQkAAYcBDAEZCQABgAEM
+        ARkJAAHAAR4BGwkAAv8BHwkAAv8BnwkAAv8B3wkAA/8JAAs=
+</value>
   </data>
 </root>
